<resources>
    <string name="app_name">Cẩm Nang Ẩm Thực</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_homeadmin">Home Admin</string>
    <string name="title_activity_homeuse">Home User</string>
    <string name="nameapp">Cẩm nang ẩm thực</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hintemail">Email</string>
    <string name="hintpassword">Mật khẩu</string>
    <string name="action_home">Quay về trang chính</string>
    <string name="check">Ghi nhớ đăng nhập</string>
    <string name="bnt_dangnhap">Đăng nhập</string>
    <string name="bnt_dangkytk">Đăng ký tài khoản</string>
    <string name="bnt_dangky">Đăng ký</string>
    <string name="hintsdt">Số điện thoại</string>
    <string name="hinthoten">Họ tên</string>
    <string name="hintbacbuoc">( Bắt buộc )</string>
    <string name="chonanh">Chọn ảnh đại diện</string>
    <string name="titlecongdong">Cộng đồng</string>
    <string name="hintcamnang">Cẩm nang</string>
    <string name="hinttt">Vui lòng đăng nhập tài khoản</string>
    <string name="hinttx">Để xem bài đăng</string>
    <string name="hintviewname">Tên menu</string>
    <string name="tim">Tìm</string>
    <string name="thoat">Thoát</string>
    <string name="hintseach">Nhập tên món cần tìm</string>
    <string name="xn">Xác nhận</string>
    <string name="maxn">Mã xát nhận</string>
    <string name="noseach">Không tìm thấy</string>
    <string name="seach">Thử lại</string>
    <string name="mabm">Mã bảo mật</string>
    <string name="quenmk"><u>Quên mật khẩu?</u></string>
    <string name="laymk">Lấy mật khẩu</string>
    <string name="mkcu">Mật khẩu cũ</string>
    <string name="mkmoi">Mật khẩu mới</string>
    <string name="mkmoinl">Nhập lại mật khẩu mới</string>
    <string name="doimk">Đổi mật khẩu</string>
    <string name="facebook_app_id">258579511521094</string>
    <string name="facebook_login_protocol_name">fb258579511521094</string>
    <string name="danhsachtk">Danh sách tài khoản</string>
    <string name="tttk">Thông tin tài khoản</string>
    <string name="xoatk">Xóa tài khoản</string>
    <string name="chinhsuatk">Chỉnh sửa</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="diachi">Địa chỉ</string>
    <string name="luu">Lưu</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="nguyenlieu">Nguyên liệu</string>
    <string name="congthuc">Công thức</string>
    <string name="dangbai">Đăng bài</string>
    <string name="chonhinh">Chọn hình ảnh</string>
    <string name="status">Bài viết đã đăng</string>
    <string name="Approved">Bài viết đang chờ</string>
    <string name="pheduyet">Phê duyệt</string>
    <array name="namespheduyet">
        <item>Đang chờ phê duyệt</item>
        <item>Đã phê duyệt</item>
    </array>
    <string name="comment">Viết bình luận...</string>
    <string name="dow">Bài viết tải về</string>
    <string name="sotay">Sổ tay đi chợ</string>
    <string name="listshopping">Danh sách đi chợ</string>
    <string name="luutru">Lưu trữ</string>
    <string name="luulai">Lưu lại</string>
    <string name="dong">Đóng</string>
    <string name="them">Thêm mới</string>
    <string name="tieude">Tiêu đề</string>
    <string name="noidung">Nội dung</string>
    <string name="capnhat">Cập nhật</string>
    <string name="huongdan">Hướng dẫn</string>
    <string name="danhdau">Bài viết đã đánh dấu</string>
</resources>
