<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_shap"
    android:orientation="vertical"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/edtseachname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/seachedit"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:hint="@string/hintseach"
        android:inputType="text"
        android:padding="7dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_thoat"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/thoat"
            android:textAllCaps="false"
            android:textColor="@color/coloroshawtext"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_tim"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/tim"
            android:textAllCaps="false"
            android:textColor="@color/coloroshawtext"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>