<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0080ff"
    tools:context=".Activity.LoginActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                android:id="@+id/add_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bnt_dangnhap"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/backgroud_form"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edtEmaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/hintemail"
            android:layout_marginBottom="15dp"
            android:inputType="textEmailAddress"
            android:padding="7dp" />
        <EditText
            android:id="@+id/edtpasswordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_key_black_24dp"
            android:hint="@string/hintpassword"
            android:inputType="textPassword"
            android:padding="7dp"
            android:layout_marginBottom="15dp"/>
<com.rey.material.widget.CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    style="@style/Material.Drawable.CheckBox"
    android:text="@string/check"
    android:textColor="@color/colortext"
    android:textSize="15dp"
    android:layout_gravity="left"
    android:textStyle="bold"
    app:cbd_tickColor="@color/white"
    android:id="@+id/checkghinho"
    android:gravity="center_vertical"
    />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quenmk"
            android:textSize="15dp"
            android:id="@+id/textquenmk"
            android:textStyle="bold"
          android:layout_gravity="right"
            android:textColor="@color/colortext"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btnlogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/bnt_dangnhap"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/colorlayBackgroud"
            android:text="@string/bnt_dangkytk"
            android:textAllCaps="false"
            android:textColor="@color/text_while"
            android:shadowDx="-2"
            android:textStyle="bold"
            android:shadowDy="-2"
            android:shadowColor="#39796b"
            android:shadowRadius="2"
            android:textSize="18dp"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>