<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegistrationActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                android:id="@+id/add_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bnt_dangky"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:background="@drawable/backgroud_form"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appAccount"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            tools:ignore="VectorDrawableCompat" />
            <LinearLayout
                android:id="@+id/lnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imgAvatar"
                android:layout_alignParentTop="true"
                android:layout_marginTop="58dp"
                android:background="@drawable/backgroud_star_account"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/iconphoto"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="1dp"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/chonanh"
            android:textColor="@color/bgchonanh"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/hintbacbuoc"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/hinthoten"
            android:inputType="textPersonName"
            android:padding="7dp" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:hint="@string/hintsdt"
            android:inputType="phone"
            android:padding="7dp" />
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/hintemail"
            android:inputType="textEmailAddress"
            android:padding="7dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_key_black_24dp"
            android:hint="@string/hintpassword"
            android:inputType="textPassword"
            android:padding="7dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <EditText
            android:id="@+id/edtcodereset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_soucode"
            android:hint="@string/mabm"
            android:inputType="text"
            android:padding="7dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/bg_dangky"
            android:layout_margin="20dp"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:text="@string/bnt_dangky"
            android:textColor="@color/white" />
    </LinearLayout>
    </ScrollView>
    </LinearLayout>