<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:gravity="center"
        android:background="@drawable/backgroud_form"
        android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imgVieweditaccount"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/backgroud_star_account"
                android:orientation="horizontal"
                android:padding="2dp">
                <ImageView
                    android:id="@+id/imgViewadduse"
                    android:layout_width="120dp"
                    android:layout_height="120dp" />
                <Button
                    android:id="@+id/iconphotoadduse"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:textColor="@color/text_while"
                    android:background="@color/bgre"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:text="@string/chonhinh" />
            </LinearLayout>
        <EditText
            android:id="@+id/edttenmonanuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_food_name"
            android:hint="@string/tenmonan"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:padding="7dp" />
        <EditText
            android:id="@+id/edtnguyenlieuuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_food_nguyenlieu"
            android:hint="@string/nguyenlieu"
            android:layout_marginBottom="10dp"
            android:padding="7dp" />
        <EditText
            android:id="@+id/edtcongthucuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_food_congthuc"
            android:hint="@string/congthuc"
            android:padding="7dp" />
        <Button
            android:id="@+id/btndangbaiviet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/colorPrimaryDark"
            android:text="@string/dangbai"
            android:textAllCaps="false"
            android:textColor="@color/text_while"
            android:textSize="15dp"
            android:layout_marginBottom="50dp"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>