<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:gravity="center"
        android:background="@drawable/backgroud_form"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appAccount"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgVieweditaccount"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"
                tools:ignore="VectorDrawableCompat" />
            <LinearLayout
                android:id="@+id/lnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imgVieweditaccount"
                android:layout_alignParentTop="true"
                android:layout_marginTop="58dp"
                android:background="@drawable/backgroud_star_account"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/iconphotoaccount"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="1dp"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>
        </RelativeLayout>
        <EditText
            android:id="@+id/edtnameaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/hinthoten"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:padding="7dp" />
        <EditText
            android:id="@+id/edtngaysinhaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_maps_back_24dp"
            android:hint="@string/ngaysinh"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:padding="7dp" />
        <EditText
            android:id="@+id/edtdiachiaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_maps_back_24dp"
            android:hint="@string/diachi"
            android:inputType="text"
            android:padding="7dp" />
        <EditText
            android:id="@+id/edtmabmaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="9dp"
            android:background="@drawable/backgroud_edittext"
            android:drawableStart="@drawable/ic_soucode"
            android:hint="@string/mabm"
            android:inputType="text"
            android:padding="7dp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/btnsendsave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/colorPrimaryDark"
            android:text="@string/luu"
            android:textAllCaps="false"
            android:textColor="@color/text_while"
            android:textSize="15dp"
            android:layout_marginBottom="50dp"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/loadpare"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>